# aafc-herbarium-dwc-extraction-2025

./: .dockerignore  .env.docker.example  .env.example  .gitignore  .gitignore 3  .gitmessage  .pre-commit-config.yaml  2025-10-01-bridge-sync.txt  404.html  AGENTS.md  API_SETUP_QUICK.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  DATA_ACCESS_OVERVIEW.md  DEPLOYMENT_GUIDE.md  DOCKER.md  Dockerfile  EXECUTIVE_SUMMARY.md  HUMAN_WORK_LIST.md  INTER_AGENT_MEMO.md  MVP_DEMONSTRATION_RESULTS.md  PRODUCTION_COMPLETION_REPORT.md  PROJECT_STATUS_UPDATE.md  README.md  REPRODUCIBLE_IMAGES_SUMMARY.md  STAKEHOLDER_UPDATE.md  SUCCESSOR_QUICK_START.md  TERMINOLOGY_GUIDE.md  TODO.md  TOMORROW_SESSION_PLAN.md  USAGE_MODES.md  analyze_gpt4omini_accuracy.py  bootstrap.sh  cli.py  compare_engines.py  demo_ui.py  direct_apple_vision.py  docker-compose.yml  download_trial_images.py  (+26 more)
.bspec/: manifest.json
.claude/: CLAUDE.md  settings.local.json
.coordination/: INTER_AGENT_MEMO.md  WEEKEND_PROJECTS.md  key-answers.md  session-sync.md
.exports/: 2025-09-27-20:33-CST.txt  2025-09-27-caveat-the-messages-below-were-generated-by-the-2.txt  2025-09-27-caveat-the-messages-below-were-generated-by-the-u.txt  2025-09-27-how-can-we-help-each-other-today.txt  2025-09-28-check-for-recent-updates-and-switch-to-the-appropr.txt
.github/: PRE_COMMIT_CHECKLIST.md  pull_request_template.md
.kb-context/: context.yaml
.specify/: ACTIVATION_GUIDE.md  IMPLEMENTATION_ROADMAP.md  POST_COMPACTION_HANDOFF.md  QUICK_START.md  SESSION_SUMMARY.md  current-assessment.md
ABCD_SCHEMA_RESEARCH/: index.html
ACCESSIBILITY_REQUIREMENTS/: index.html
AGENTS/: index.html
AGENT_DOCUMENTATION_OUTLINE/: index.html
API_KEY_MANAGEMENT_SOP/: index.html
CLOUD_API_SETUP/: index.html
COST_CLAIMS_AUDIT/: index.html
DATA_PUBLICATION_GUIDE/: index.html
DEVELOPMENT_LOG/: index.html
DOCS_ARCHITECTURE/: index.html
DOCUMENTATION_QUALITY_GATES_PATTERN/: index.html
FEATURE_PLANNING/: index.html
GBIF_VALIDATION_INTEGRATION/: index.html
HANDOVER_PRIORITIES/: index.html
IMAGE_SOURCES/: index.html
OPENROUTER_BATCH_API/: index.html
PLATFORM_OPTIMIZATION/: index.html
PRE_RELEASE_VERSIONING/: index.html
PRODUCTION_HANDOVER/: index.html
PROJECT_CLOSEOUT/: index.html
RELEASE_2_0_PLAN/: index.html
RELEASE_PROCESS/: index.html
SCIENTIFIC_PROVENANCE_PATTERN/: index.html
STORAGE_ABSTRACTION/: index.html
TESTING_STANDARDS/: index.html
VERSION_HISTORY_ANALYSIS/: index.html
agents/: README.md  pipeline_composer.py
api_reference/: index.html
changelog/: index.html
config/: README.md  config.default.toml  config.gpt4omini.toml  config.gpt4omini_aafc.toml  config.s3-cached.toml  config.tesseract-only.toml  config.windows.toml  image_source_examples.toml  image_sources.toml  test_validation.toml
configuration/: index.html
contributing/: index.html
data_preparation_process/: index.html
database_schema/: index.html
decisions/: index.html
deliverables/: README.md  v1.0_vision_api_baseline.jsonl
demo_event_output/: events.jsonl  events_early_failure.jsonl
development/: index.html
docs/: ABCD_SCHEMA_RESEARCH.md  ACCESSIBILITY_REQUIREMENTS.md  AGENTS.md  AGENT_DOCUMENTATION_OUTLINE.md  API_KEY_MANAGEMENT_SOP.md  CLOUD_API_SETUP.md  CNAME  COST_CLAIMS_AUDIT.md  DATA_NODE_ARCHITECTURE.md  DATA_PUBLICATION_GUIDE.md  DEVELOPMENT_LOG.md  DOCS_ARCHITECTURE.md  DOCUMENTATION_QUALITY_GATES_PATTERN.md  FEATURE_PLANNING.md  GBIF_VALIDATION_INTEGRATION.md  HANDOFF_SUMMARY.md  HANDOVER_PRIORITIES.md  IMAGE_SOURCES.md  OPENROUTER_BATCH_API.md  OPERATIONS_RUNBOOK.md  PLATFORM_OPTIMIZATION.md  PRODUCTION_HANDOVER.md  PROJECT_CLOSEOUT.md  PUBLISHING.md  README.md  RELEASE_2_0_PLAN.md  RELEASE_PROCESS.md  REVIEW_QUICK_START.md  SCIENTIFIC_PROVENANCE_PATTERN.md  SPECIMEN_PROVENANCE_ARCHITECTURE.md  STORAGE_ABSTRACTION.md  TECH_DEBT.md  TESTING_STANDARDS.md  TROUBLESHOOTING_GUIDE.md  UX_FILTER_IMPROVEMENTS.md  _config.yml  api_reference.md  changelog.md  configuration.md  data_preparation_process.md  (+26 more)
dwc/: AGENTS.md  __init__.py  archive.py  mapper.py  normalize.py  schema.py  schema_manager.py
engines/: __init__.py  hybrid_triage.py  language_codes.py  multilingual.py  protocols.py
examples/: content_dag_herbarium.py  event_bus_demo.py  provenance_example.py  schema_mapping_demo.py
export_and_reporting/: index.html
extraction_run_analysis_20250930/: index.html
faq/: index.html
full_dataset_ocr_run/: app.db  candidates.db  manifest.json  raw.jsonl
full_dataset_processing/: README.md  STATUS.md
gpt/: index.html
herbarium_dwc/: cli.py
human-ai-collaboration-framework/: index.html
io_utils/: __init__.py  candidates.py  database.py  image_source.py  logs.py  migrate.py  ocr_cache.py  path_registry.py  read.py  spreadsheets.py  write.py
mapping_and_vocabulary/: index.html
multilingual_ocr/: index.html
mvp_demonstration/: STAKEHOLDER_SUMMARY.md  demo_metadata.json
nav-structure/: index.html
ocr_engines/: index.html
preprocess/: __init__.py  flows.py
preprocessing_flows/: index.html
provenance/: fragment.py  specimen_index.py
qc/: __init__.py  gbif.py  index.html
quickstart_examples/: index.html
reproducible_image_access/: index.html
research/: index.html
research_contributions/: index.html
review_workflow/: index.html
roadmap/: index.html
schema_mapping_improvements/: index.html
scripts/: analyze_empty_records.py  analyze_gpt4omini_accuracy.py  analyze_spatial_zones.py  audit-doc-links.sh  autonomous_orchestrator.py  batch_dashboard.py  batch_notify.py  batch_resize.py  batch_web_dashboard.py  cancel_batch.py  check_batch_raw.py  check_batch_status.py  check_v1_timing.py  check_v2_detailed.py  check_v3_status.py  check_version_consistency.py  cleanup_git_data.sh  compare_engines.py  compare_strategies.py  convert_csv_to_jsonl.py  correct_interactive.py  create_batch_request.py  create_mvp_demo.py  create_roadmap_issues.py  create_test_sample_bundle.py  direct_apple_vision.py  download_results.py  download_trial_images.py  experiment_orchestrator.py  extract_openrouter.py  (+35 more)
(+402 files in other folders)
